# PIM-DL-ASPLOS

./: .gitignore  .gitmodules  LICENSE  README.md
asplos24-ae/: README.md  compile-inference-engine.sh  run-all.sh  run-end-to-end.sh  run-performance-analysis.sh  run-search-space-illustration.sh  run-sensitivity-analysis.sh
asplos24-ae/end-to-end/: run_experiments.py
asplos24-ae/end-to-end/baselines/cpu/: CMakeLists.txt  main.cpp  run_cpu_transformer.sh  transformer.cpp  transformer.h
asplos24-ae/end-to-end/baselines/pim/: CMakeLists.txt  dpu_common.h  gemm_kernel.c  run_pim_gemm.sh  test_pim_gemm.cpp  utils.h
asplos24-ae/end-to-end/configs/bert-base/: v2-ct16.yaml
asplos24-ae/end-to-end/configs/bert-large/: v2-ct16.yaml  v4-ct16.yaml
asplos24-ae/end-to-end/configs/vit-huge/: v2-ct16.yaml
asplos24-ae/performance-analysis/: run_experiments.py
asplos24-ae/performance-analysis/configs/bert-base/: v4-ct16.yaml
asplos24-ae/performance-analysis/configs/vit-huge/: v4-ct16.yaml
asplos24-ae/search-space-illustration/: run_experiments.py
asplos24-ae/search-space-illustration/configs/coarse_grain/: 128_8__16_256_256.yaml  128_8__32_128_128.yaml  128_8__32_256_64.yaml  128_8__64_128_32.yaml  16_64__16_256_256.yaml  16_64__32_128_128.yaml  16_64__32_256_64.yaml  16_64__64_64_64.yaml  256_4__16_256_256.yaml  256_4__32_256_64.yaml  32_32__16_256_256.yaml  32_32__32_128_128.yaml  32_32__32_256_64.yaml  32_32__64_128_32.yaml  32_32__64_64_64.yaml  64_16__16_256_256.yaml  64_16__32_128_128.yaml  64_16__32_256_64.yaml  64_16__64_128_32.yaml  64_16__64_64_64.yaml
asplos24-ae/search-space-illustration/configs/fine_grain/: 128__16_256_256.yaml  128__32_128_128.yaml  16__16_256_256.yaml  16__32_128_128.yaml  16__32_256_64.yaml  16__64_128_32.yaml  16__64_64_64.yaml  32__16_256_256.yaml  32__32_128_128.yaml  32__32_256_64.yaml  32__64_128_32.yaml  32__64_64_64.yaml  64__16_256_256.yaml  64__32_128_128.yaml  64__32_256_64.yaml  64__64_64_64.yaml  8__16_256_256.yaml  8__32_128_128.yaml  8__32_256_64.yaml  8__64_128_32.yaml  8__64_64_64.yaml
asplos24-ae/search-space-illustration/configs/global/: cfn__128_1024.yaml  cfn__2048_64.yaml  cfn__32_4096.yaml  cfn__512_256.yaml  cfn__8192_16.yaml  cnf__128_1024.yaml  cnf__2048_64.yaml  cnf__32_4096.yaml  cnf__512_256.yaml  cnf__8192_16.yaml  fcn__128_1024.yaml  fcn__2048_64.yaml  fcn__32_4096.yaml  fcn__512_256.yaml  fcn__8192_16.yaml  fnc__128_1024.yaml  fnc__2048_64.yaml  fnc__32_4096.yaml  fnc__512_256.yaml  fnc__8192_16.yaml  ncf__128_1024.yaml  ncf__2048_64.yaml  ncf__32_4096.yaml  ncf__512_256.yaml  ncf__8192_16.yaml  nfc__128_1024.yaml  nfc__2048_64.yaml  nfc__32_4096.yaml  nfc__8192_16.yaml
asplos24-ae/search-space-illustration/configs/static/: 1__128_16.yaml  1__256_8.yaml  1__32_64.yaml  1__64_32.yaml  2__128_16.yaml  2__16_128.yaml  2__256_8.yaml  2__32_64.yaml  2__64_32.yaml  4__16_128.yaml  4__256_8.yaml  4__32_64.yaml  4__64_32.yaml  8__128_16.yaml  8__16_128.yaml  8__256_8.yaml  8__32_64.yaml  8__64_32.yaml
asplos24-ae/sensitivity-analysis/: run_experiments.py
asplos24-ae/sensitivity-analysis/configs/bert-base/batch-size/: bs128.yaml  bs16.yaml  bs32.yaml  bs8.yaml
asplos24-ae/sensitivity-analysis/configs/bert-base/centroid-number/: ct128.yaml  ct32.yaml  ct64.yaml  ct8.yaml
asplos24-ae/sensitivity-analysis/configs/bert-base/sub-vector-length/: v16.yaml  v2.yaml  v32.yaml  v4.yaml  v8.yaml
asplos24-ae/sensitivity-analysis/configs/bert-large/batch-size/: bs128.yaml  bs16.yaml  bs32.yaml  bs8.yaml
asplos24-ae/sensitivity-analysis/configs/bert-large/centroid-number/: ct128.yaml  ct16.yaml  ct32.yaml  ct64.yaml  ct8.yaml
asplos24-ae/sensitivity-analysis/configs/bert-large/sub-vector-length/: v16.yaml  v2.yaml  v32.yaml  v8.yaml
asplos24-ae/sensitivity-analysis/configs/hidden-dim/: dim2048.yaml  dim2560.yaml  dim4096.yaml  dim5120.yaml
asplos24-ae/sensitivity-analysis/configs/vit-huge/batch-size/: bs128.yaml  bs16.yaml  bs32.yaml  bs64.yaml  bs8.yaml
asplos24-ae/sensitivity-analysis/configs/vit-huge/centroid-number/: ct128.yaml  ct32.yaml  ct64.yaml  ct8.yaml
asplos24-ae/sensitivity-analysis/configs/vit-huge/sub-vector-length/: v16.yaml  v2.yaml  v32.yaml  v8.yaml
inference-engine/: CMakeLists.txt  run_amm.py  run_layer.py  run_model.py
inference-engine/3rd/: CMakeLists.txt
inference-engine/configs/: single_kernel_input_example.yaml  single_kernel_output_example.yaml  transformer_input_example.yaml  transformer_output_example.yaml
inference-engine/src/: CMakeLists.txt
inference-engine/src/dpu/: CMakeLists.txt  dpu_configs.h  pim_lut_kernel.c
inference-engine/src/host/: CMakeLists.txt  amm_host.cpp  amm_host.h  defines.h  index_calc_host.cpp  index_calc_host.h  parser.cpp  parser.h  pim_lut_host.cpp  pim_lut_host.h  transformer_layer.cpp  transformer_layer.h  transformer_model.cpp  transformer_model.h
inference-engine/src/tuner/: CMakeLists.txt  auto_tuner.cpp  auto_tuner.h
inference-engine/test/: CMakeLists.txt  test_amm.cpp  test_transformer.cpp  test_transformer_layer.cpp
model-calibration/: bookcorpus_generator.py  calibrate_bert.sh  calibrate_vit.sh  evaluate_bert.sh  evaluate_vit.sh  pim_weight_converter.py  setup.py
model-calibration/LUTNeuro/: LUTLinear_t.py  LUTerize.py  __init__.py
model-calibration/examples/: run_luterize_image_classification_no_trainer.py  run_lutrize_glue_no_trainer.py  run_lutrize_mlm_no_trainer.py
